--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Awesome Cool website !!!!!</title>
+    <style>
+
+        body {
+            background-color: blueviolet;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Geat Title</h1>
